# oxytcmri-dti-processing

./: .dockerignore  .gitignore  404.html  Dockerfile  README  README.md  add_clinical_data_config_template.json  cli.py  index.html  main.py  makefile  mkdocs.yml  objects.inv  oxytcmricli.py  pyproject.toml  requirements.txt  settings.toml  sitemap.xml
.github/: copilot-instructions.md
.github/workflows/: docker-smoke.yml  docs.yml  pytest.yml
api_reference/: index.html
data/clinical_data/: PbtO2.csv  analysis_population.csv
docs/: api_reference.md  index.md
docs/reference/: subject.md
documentation/: Makefile
documentation/source/: conf.py  index.rst
external_scripts/: Test_abnormal_detection.sh  Train_abnormal_detection.sh  compute_normal_values.py  compute_normal_values_center.py  compute_threshold_based_segmentation.py  compute_threshold_based_segmentation_from_atlas.py  compute_threshold_based_segmentation_with_staple.sh  oxytc_test.py  oxytc_train.py  process_train_single_patient.py
oxytcmri/: .secrets.toml  __init__.py  config_logging.py  controllers.py  data_export.py  data_import.py  logger.py  models.py  mri_analysis.py  mri_process.py  settings.py  settings.toml  test_oxytcmri.py  tests.py  utils.py
oxytcmri/domain/: __init__.py
oxytcmri/entrypoints/: analyse_data.ipynb
oxytcmri/infrastructure/: __init__.py  cli.py  clinical_data_repositories.py  importers.py  listeners.py  logger.py  settings.py
oxytcmri/interface/: controllers.py  importers.py
oxytcmri/test-data/: README  (+9 more)
reference/: index.html
search/: search_index.json
(+101 files in other folders)
